--- a/styles/style.css
+++ b/styles/style.css
@@ -10,22 +10,332 @@
 }
 
 .header {
+  margin: 0;
   height: 100vh;
   min-height: 600px;
   max-height: 756px;
+  background-color: #f2f2f2;
+  display: flex;
+  position: relative;
   /* выше установили ограничения для секции */
 }
 
-/* ниже мы привели пример двух селекторов, чтобы вы вспомнили запись элемента */
-.header__square-pic {
-  height: 568px;
-  width: 568px;
+.logo {
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+  width: 183px;
+  height: 32px;
 }
 
-/* и элемента с модификатором вида ключ-значение */
+.logo_place_header {
+  background-image: url(../images/logo_place_header.svg);
+  position: absolute;
+  top: 30px;
+  left: 64px;
+}
+
+.header__title {
+  position: relative;
+  left: 62px;
+  align-self: center;
+  width: 730px;
+  font-size: 102px;
+  font-weight: bold;
+}
+
+.header__subtitle {
+  position: absolute;
+  bottom: 30px;
+  left: 64px;
+  width: 388px;
+  font-size: 18px;
+  font-weight: 400;
+}
+
+.header__link{
+  text-decoration: none;
+}
+
+.header__main-illustration {
+  position: absolute;
+  background-image: url(../images/header-image.png);
+  background-size: cover;
+  height: 608px;
+  width: 765px;
+  z-index: 1;
+  bottom: 0;
+  right: 0;
+}
+
+.header__square-pic {
+  background-color: blue;
+  z-index: 0 ;
+  position: absolute;
+  height: 568px;
+  width: 568px;
+  right: 0;
+  top: 64px;
+}
+
+.description {
+  margin: 100px 0;
+}
+
+.description__two-colums {
+  display: flex;
+  justify-content: space-between;
+  margin: auto;
+  width: 80%;
+
+}
+
+.two-colums__brief {
+  margin: 0;
+  width: 175px;
+  color: #2f80ed;
+  font-size: 18px;
+  line-height: 1.2;
+  font-weight: 400;
+
+}
+
+.two-colums__main-text {
+  display: flex;
+  flex-direction: column;
+  width: 80%;
+  min-width: 784px;
+  font-size: 24px;
+  line-height: 34px;
+  font-weight: 400;
+}
+
+.two-column__paragraph {
+  margin: 0;
+}
+
+.two-colums__span-accent {
+  margin: 30px 0;
+}
+
+.two-colums__span-accent::before {
+
+  content: 'Вывод:';
+  font-weight: bold;
+}
+.content {
+
+}
+.digits {
+  margin: 0;
+  position: relative;
+}
+
+.section-title {
+  display: block;
+  margin: 100px auto 20px;
+  text-align: center;
+  width: 60%;
+  font-size: 60px;
+  line-height: 1.15;
+  font-weight: bold;
+}
+
+.section-subtitle {
+  display: block;
+  width: 60%;
+  text-align: center;
+  margin: auto;
+  font-size: 24px;
+  line-height: 34px;
+  font-weight: 400;
+}
+
+.table {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  width: 1100px;
+  margin: auto auto 100px auto;
+}
+
+.table__cell {
+  width: 250px;
+  margin: 60px auto auto auto;
+}
+
+.table__heading {
+  font-size: 24px;
+  line-height: 1.15;
+  font-weight: bold;
+}
+
+.table__text {
+  margin: 20px 0 0 0;
+  font-size: 18px;
+  line-height: 1.2;
+  font-weight: 400;
+}
+
+.feynman {
+  background-color:#f2f2f2;
+  background-image:url(../images/feynman.png);
+  background-repeat: no-repeat;
+  background-position: bottom left;
+  background-size:867px 637px;
+  height: 890px;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  position: relative;
+}
+
+.feynman__content {
+  width: 648px;
+  margin: 100px auto auto auto;
+}
+
+.freynman__title {
+  width: 648px;
+  font-size: 120px;
+  line-height: 1.15;
+  font-weight: 700;
+  text-align: center;
+  margin: 0;
+  padding: 0;
+}
+
+.freynmann__subtitle {
+  margin: 70px 0 0 0;
+  font-size: 36px;
+  line-height: 51px;
+  padding: 0;
+  text-align: center;
+  font-weight: 400;
+}
+
+.freynman__link {
+  font-size: 36px;
+  line-height: 51px;
+  text-decoration: none;
+  position: absolute;
+  right: 48px;
+  bottom: 50%;
+  font-weight: 400;
+}
+
+.kaufman {
+  margin: 0;
+  background-color:#1f1f1f ;
+  z-index: -2;
+  position: relative;
+  overflow: hidden;
+}
+
+.section-title_theme_dark {
+  color: white;
+  margin: 90px auto 20px;
+
+}
+
+.section-subtitle_theme_dark {
+  font-weight: 400;
+  color: white;
+}
+
+.table_theme_dark {
+  margin: auto auto 90px auto;
+}
+
 .table__cell_theme_dark {
   width: 200px;
   color: white;
   margin-right: 0;
   margin-top: 80px;
 }
+
+.table__heading_theme_dark {
+}
+
+.table__text_theme_dark {
+  font-weight: 400;
+
+}
+.kaufman__triangle {
+  width: 877px;
+  height: 877px;
+  position: absolute;
+  top: 0;
+  right: -210px;
+  z-index: -1;
+}
+
+.footer {
+  margin: auto;
+  min-height: 350px;
+  background-color:#1f1f1f ;
+  color: white;
+  border-top: 1px solid #1f1f1f;
+  border-bottom: 1px solid #1f1f1f;
+
+}
+
+.footer_columns {
+  min-height: 250px;
+  display: flex;
+  justify-content: space-between;
+  margin: 60px auto 40px;
+  width: 90%;
+}
+
+.footer__column_content_copyright {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  flex-basis: 711px;
+}
+
+.logo_place_footer {
+  background-image: url(../images/logo_place_footer.svg);
+  height: 35px;
+}
+
+.footer__author {
+  font-size: 18px;
+  line-height: 25px;
+  font-weight: 400;
+}
+.footer__column_content_info {
+
+}
+.footer__column-heading {
+  font-size: 18px;
+  line-height: 30px;
+  font-weight: bold;
+}
+
+.footer__column-links {
+  display: flex;
+  flex-direction: column;
+  margin: 20px auto 16px auto;
+  font-size: 18px;
+  line-height: 30px;
+  font-weight: 400;
+}
+
+.footer__column_content_social {
+}
+
+.footer__column-link {
+  text-decoration: none;
+  color: white;
+}
+
+.footer__social-icon {
+  width: 16px;
+  height: 16px;
+}
+
+
+
+
+
