--- a/styles/style.css
+++ b/styles/style.css
@@ -35,7 +35,7 @@
 }
 
 .header__title {
-  margin-left: 62px;
+  margin: 0 0 0 64px;
   align-self: center;
   width: 730px;
   font-size: 102px;
@@ -111,10 +111,10 @@
 }
 
 .two-columns__paragraph {
-margin: 0;
+  margin: 0;
 }
 
-.two-columns__paragraph_indent {
+.two-columns__paragraph:nth-child(2) {
   margin: 30px 0;
 }
 
@@ -125,6 +125,7 @@ margin: 0;
 .content {
 
 }
+
 .digits {
   margin: 0;
 }
@@ -250,8 +251,8 @@ margin: 0;
 
 .table__text_theme_dark {
   font-weight: 400;
-
 }
+
 .kaufman__triangle {
   background-image:url(../images/kaufman-triangle.svg);
   background-repeat: no-repeat;
@@ -279,7 +280,7 @@ margin: 0;
   width: 90%;
 }
 
-.footer__column{
+.footer__column {
 
 }
 
@@ -324,6 +325,7 @@ margin: 0;
 }
 
 .footer__column_content_social {
+
 }
 
 .footer__column-link {
