--- a/styles/style.css
+++ b/styles/style.css
@@ -379,11 +379,15 @@ list-style-type: none;
 .section-title_theme_dark {
   color: white;
   margin: 90px auto 20px;
+  position: relative;
+  z-index: 2;
 }
 
 .section-subtitle_theme_dark {
   font-weight: 400;
   color: white;
+  position: relative;
+  z-index: 2;
 }
 
 .table_theme_dark {
@@ -412,13 +416,25 @@ list-style-type: none;
   position: absolute;
   top: 0;
   right: -210px;
-  z-index: 1;
+  z-index: 0;
   width: 877px;
   height: 877px;
 }
 
 /* -------------------resources-------------------- */
+.resources {
+}
 
+.resources__logo-zone {
+  margin: 80px auto 217px;
+  width: 1100px;
+  display: flex;
+}
+
+.resources__logo {
+  width: 270px; 
+  height: 38px;
+}
 /* -------------------Footer-------------------- */
 .footer {
   min-height: 350px;
