--- a/styles/style.css
+++ b/styles/style.css
@@ -62,6 +62,11 @@
   z-index: 49;
 }
 
+.link_opacity:hover {
+  opacity: 0.3;
+  transition: opacity .33s ease; 
+}
+
 .header__link{
   text-decoration: none;
   color: #2f80ed;
