--- a/pages/index.css
+++ b/pages/index.css
@@ -63,4 +63,4 @@
 @import url(../blocks/footer/__column-link/footer__column-link.css);
 @import url(../blocks/footer/__column-heading/footer__column-heading.css);
 @import url(../blocks/footer/__author/footer__author.css);
-
+@import url(../blocks/logo/_place_footer/logo_place_footer.css);
