--- a/pages/index.css
+++ b/pages/index.css
@@ -7,7 +7,7 @@
 @import url(../blocks/header/__main-illustration/header__main-illustration.css);
 @import url(../blocks/header/__link/header__link.css);
 @import url(../blocks/logo/logo.css);
-@import url(../blocks/logo/_place_header/logo__place_header);
+@import url(../blocks/logo/_place_header/logo_place_header.css);
 @import url(../blocks/rotate/rotate.css);
 @import url(../blocks/link_opacity/link_opacity.css);
 @import url(../blocks/description/description.css);
