--- a/blocks/khan/__buy-link/khan_buy-link.css
+++ b/blocks/khan/__buy-link/khan_buy-link.css
@@ -1,6 +1,6 @@
 .khan__buy-link {
   font-size: 30px;
-  font-weight: bold;
+  font-weight: 400;
   line-height: 42px;
   color: #2f80ed;
   text-decoration: none;
