--- a/blocks/cards/__item/cards__item.css
+++ b/blocks/cards/__item/cards__item.css
@@ -1,4 +1,9 @@
 .cards__item {
   width: 240px;
   list-style-type: none;
+  margin-right: 100px;
+  }
+
+  .cards__item:nth-child(3n) {
+    margin: 0;
   }
