--- a/pages/index.css
+++ b/pages/index.css
@@ -1,4 +1,4 @@
-@import url(../vendor/normalize.csss);
+@import url(../vendor/normalize.css);
 @import url(../blocks/keyframes/keyframes.css);
 @import url(../blocks/page/page.css);
 @import url(../blocks/header/header.css);
